--- a/css/primavera.css
+++ b/css/primavera.css
@@ -540,3 +540,114 @@ footer {
   font-size: 2em;
   margin-bottom: 20px;
 }
+
+/* MODAL */
+
+.modal {
+  position: fixed;
+  inset: 0; /* top:0; right:0; bottom:0; left:0; */
+  background-color: rgba(0, 0, 0, 0.9);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal .form-group {
+  padding: 0.5em;
+  font-size: 1.2em;
+}
+
+.modal input {
+  padding: 0.6em;
+  border-radius: 4px;
+  width: 80%;
+}
+
+.modal .firstPage .errorMessage {
+  position: absolute;
+  display: none;
+  color: red;
+  top: 65px;
+  font-size: 1em;
+  font-weight: bold;
+  margin-left: 10px;
+  justify-content: left;
+}
+
+.modal .registerPage .errorMessage {
+  position: absolute;
+  display: none;
+  color: red;
+  top: 60px;
+  font-size: 1em;
+  font-weight: bold;
+  margin-left: 10px;
+  justify-content: left;
+}
+
+.modal h2 {
+  font-size: 1.5em;
+  font-weight: bold;
+  padding: 0.8em;
+  margin-left: -10px;
+}
+
+.modal > .firstPage {
+  background-color: #fff;
+  padding: 1rem;
+  width: 430px;
+  height: 230px;
+  position: relative;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+}
+
+.modal > .registerPage {
+  background-color: #fff;
+  padding: 10px 10px 0px 0px;
+  width: 460px;
+  height: 290px;
+  position: relative;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+}
+
+.modal .btn {
+  display: block;
+  margin-top: 10px;
+  margin-left: 335px;
+  background-color: #0d6efd;
+  color: white;
+  font-size: 1em;
+  border-radius: 5px;
+  box-shadow: none;
+  border: #0d6efd;
+  padding: 10px 18px 10px 18px;
+}
+
+.btModalClose {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  width: 28px;
+  height: 28px;
+  background-color: #fff;
+  border: 4px solid #807e7e;
+  border-radius: 50%;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #000000;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  transition: transform 0.1s, box-shadow 0.1s;
+}
+
+.btModalClose:hover {
+  background-color: #666;
+  color: #fff;
+}
+
+.btModalClose:active {
+  transform: translateY(1px);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
