--- a/css/primavera.css
+++ b/css/primavera.css
@@ -557,44 +557,35 @@ footer {
   font-size: 1.2em;
 }
 
-.modal input {
-  padding: 0.6em;
+.modal .firstPage input {
+  padding: 8px;
   border-radius: 4px;
-  width: 80%;
+  width: 300px;
+  height: 12px;
 }
 
-.modal .firstPage .errorMessage {
-  position: absolute;
-  display: none;
-  color: red;
-  top: 65px;
-  font-size: 1em;
-  font-weight: bold;
-  margin-left: 10px;
-  justify-content: left;
+.modal .registerPage input {
+  padding: 8px;
+  border-radius: 4px;
+  width: 318px;
+  height: 32px;
 }
 
-.modal .registerPage .errorMessage {
-  position: absolute;
-  display: none;
-  color: red;
-  top: 60px;
-  font-size: 1em;
+.modal .firstPage h2 {
+  font-size: 25px;
   font-weight: bold;
-  margin-left: 10px;
-  justify-content: left;
+  padding: 16px 18px 32px 32px;
 }
 
-.modal h2 {
-  font-size: 1.5em;
+.modal .registerPage h2 {
+  font-size: 25px;
   font-weight: bold;
-  padding: 0.8em;
-  margin-left: -10px;
+  padding: 16px 18px 32px 32px;
 }
 
 .modal > .firstPage {
   background-color: #fff;
-  padding: 1rem;
+  padding: 10px;
   width: 430px;
   height: 230px;
   position: relative;
@@ -603,33 +594,69 @@ footer {
 
 .modal > .registerPage {
   background-color: #fff;
-  padding: 10px 10px 0px 0px;
-  width: 460px;
-  height: 290px;
+  padding: 10px;
+  width: 450px;
+  height: 250px;
   position: relative;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-  box-sizing: border-box;
 }
 
-.modal .btn {
+.modal .firstPage .btn {
   display: block;
-  margin-top: 10px;
-  margin-left: 335px;
+  margin-top: 5px;
+  margin-left: 305px;
   background-color: #0d6efd;
   color: white;
-  font-size: 1em;
+  font-size: 16px;
   border-radius: 5px;
   box-shadow: none;
   border: #0d6efd;
-  padding: 10px 18px 10px 18px;
+  padding: 8px 18px 5px 18px;
 }
 
-.btModalClose {
+.modal .registerPage .btn {
+  display: block;
+  margin-top: 5px;
+  margin-left: 305px;
+  background-color: #0d6efd;
+  color: white;
+  font-size: 16px;
+  border-radius: 5px;
+  box-shadow: none;
+  border: #0d6efd;
+  padding: 8px 18px 5px 18px;
+}
+
+.modal .firstPage .errorMessage {
+  position: absolute;
+  display: none;
+  color: red;
+  top: 65px;
+  font-size: 16px;
+  margin-left: 32px;
+  justify-content: left;
+}
+
+.modal .registerPage .errorMessage {
+  position: absolute;
+  display: none;
+  color: red;
+  top: 65px;
+  font-size: 16px;
+  margin-left: 32px;
+  justify-content: left;
+}
+
+.modal #loginForm {
+  padding-left: 20px;
+}
+
+.modal .firstPage .btModalClose {
   position: absolute;
   top: -12px;
   right: -12px;
-  width: 28px;
-  height: 28px;
+  width: 27px;
+  height: 27px;
   background-color: #fff;
   border: 4px solid #807e7e;
   border-radius: 50%;
@@ -642,12 +669,61 @@ footer {
   transition: transform 0.1s, box-shadow 0.1s;
 }
 
-.btModalClose:hover {
-  background-color: #666;
-  color: #fff;
+.modal .registerPage .btModalClose {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  width: 28px;
+  height: 29px;
+  background-color: #fff;
+  border: 4px solid #807e7e;
+  border-radius: 50%;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #000000;
+  cursor: pointer;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  transition: transform 0.1s, box-shadow 0.1s;
 }
 
 .btModalClose:active {
   transform: translateY(1px);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+#greeting {
+  position: relative;
+  top: -5px;
+  left: -15px;
+}
+
+.search-container {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  padding-right: 15px;
+}
+
+.search-input {
+  width: 0;
+  height: 30px;
+  outline: none;
+  border: none;
+  transition: width 0.5s ease;
+  padding-left: 10px;
+  font-size: 14px;
+  opacity: 0;
+  position: absolute;
+  right: 55px;
+  background: white;
+}
+
+.search-input.active {
+  width: 300px;
+  opacity: 1;
+}
+
+.search-input:focus {
+  border: 1px solid #aaa;
 }
