--- a/css/primavera.css
+++ b/css/primavera.css
@@ -44,18 +44,23 @@ header {
   justify-content: space-between;
 }
 
-/* #topHeaderIcons {
-    display: flex;
-    column-gap: 20px;
-} */
+#topHeaderIcons {
+  display: flex;
+  column-gap: 20px;
+}
+
+#topHeaderIcons > *:nth-child(2) {
+  margin-left: 20px;
+}
+
 #topHeaderIcons a {
   font-size: 1.5rem;
   color: inherit;
 }
 
-#topHeaderIcons *:not(:first-of-type) {
-  margin-left: 20px;
-}
+/* #topHeaderIcons *:not(:first-of-type) {
+  margin-left: 1px;
+} */
 
 #topMenu {
   margin-top: 20px;
@@ -625,6 +630,12 @@ footer {
   box-shadow: none;
   border: #0d6efd;
   padding: 8px 18px 5px 18px;
+  transition: transform 0.1s, box-shadow 0.1s;
+}
+
+.modal .btn:active {
+  transform: scale(0.98) translateY(0.5px);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .modal .firstPage .errorMessage {
@@ -655,13 +666,14 @@ footer {
   position: absolute;
   top: -12px;
   right: -12px;
-  width: 27px;
-  height: 27px;
+  width: 22px;
+  height: 20px;
   background-color: #fff;
   border: 4px solid #807e7e;
   border-radius: 50%;
   font-size: 18px;
-  line-height: 28px;
+  font-weight: bold;
+  line-height: 23px;
   text-align: center;
   color: #000000;
   cursor: pointer;
@@ -673,13 +685,14 @@ footer {
   position: absolute;
   top: -12px;
   right: -12px;
-  width: 28px;
-  height: 29px;
+  width: 27px;
+  height: 27px;
   background-color: #fff;
   border: 4px solid #807e7e;
   border-radius: 50%;
   font-size: 18px;
-  line-height: 28px;
+  font-weight: bold;
+  line-height: 23px;
   text-align: center;
   color: #000000;
   cursor: pointer;
@@ -693,37 +706,30 @@ footer {
 }
 
 #greeting {
+  font-size: 18px;
   position: relative;
-  top: -5px;
-  left: -15px;
+  top: 2.5px;
+  left: 40px;
+  transition: left 0.5s ease;
 }
 
 .search-container {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-  padding-right: 15px;
+  display: flex;
+  gap: 10px;
 }
 
 .search-input {
   width: 0;
   height: 30px;
-  outline: none;
-  border: none;
-  transition: width 0.5s ease;
-  padding-left: 10px;
-  font-size: 14px;
   opacity: 0;
-  position: absolute;
-  right: 55px;
-  background: white;
+  transition: width 0.5s ease, opacity 0.5s ease;
+  font-size: 16px;
+  border: 1px solid transparent;
+  margin-top: -5px;
 }
 
 .search-input.active {
   width: 300px;
   opacity: 1;
-}
-
-.search-input:focus {
   border: 1px solid #aaa;
 }
