--- a/css/primavera.css
+++ b/css/primavera.css
@@ -733,3 +733,33 @@ footer {
   opacity: 1;
   border: 1px solid #aaa;
 }
+
+table {
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+td,
+th {
+  padding: 20px 50px;
+  text-align: left;
+}
+
+.profileTable {
+  text-align: center;
+}
+
+.profileTable > h1 {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.profileTable > .btn {
+  width: 210px;
+  height: 35px;
+  border-radius: 5px;
+  margin-bottom: 40px;
+  margin-left: 1150px;
+}
