Created pages to change password

--- a/css/primavera.css
+++ b/css/primavera.css
@@ -756,21 +756,31 @@ th {
   font-weight: bold;
 }
 
-.profileTable .btnEditProfile {
+.btnEditProfileGroup {
+  display: flex;
+  justify-content: flex-end;
+  gap: 30px;
+  margin-bottom: 40px;
+  margin-right: 20px;
+}
+
+.btnEditProfileGroup .btnEditProfile {
   width: 210px;
   height: 35px;
   background-color: #0d6efd;
   color: white;
   border-radius: 5px;
   border: none;
-  margin-bottom: 40px;
-  margin-left: 1160px;
   font-size: 16px;
 }
 
 .btnEditProfile:active {
   transform: scale(0.98) translateY(0.5px);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.btnEditProfileGroup button:nth-child(2) {
+  background-color: green;
 }
 
 .btnSaveProfile {
