--- a/css/primavera.css
+++ b/css/primavera.css
@@ -794,3 +794,37 @@ th {
   margin-left: 1160px;
   font-size: 16px;
 }
+
+.topHeaderIconAdm {
+  display: none;
+}
+
+#tableAdm h1 {
+  margin-top: 30px;
+  font-weight: bold;
+  font-size: 26px;
+}
+
+#tableUsers {
+  margin-top: 40px;
+  border: solid rgb(235, 235, 235) 1px;
+  max-height: 400px;
+  overflow-y: auto;
+  margin-bottom: 50px;
+}
+
+#tableUsers .btn {
+  border-radius: 15px;
+  width: 90px;
+}
+
+#tableUsers td,
+#tableUsers th {
+  padding: 16px;
+  vertical-align: middle;
+}
+
+#tableUsers thead th {
+  font-weight: bold;
+  background-color: #e9ecef; /* opcional: cor de fundo clara no cabeçalho */
+}
